--- a/.github/workflows/hype.yml
+++ b/.github/workflows/hype.yml
@@ -19,7 +19,7 @@ jobs:
         run: go install github.com/gopherguides/hype/cmd/hype@latest
 
       - name: Run hype
-        run: hype export -format=markdown -f hype.md > ../README.md
+        run: hype export -format=markdown -f hype.md > README.md
 
       - name: Commit README back to the repo
         run: |-
