--- a/.github/workflows/hype.yml
+++ b/.github/workflows/hype.yml
@@ -16,7 +16,7 @@ jobs:
           cache-dependency-path: subdir/go.sum
 
       - name: Install hype
-        run: go install github.com/gopherguides/hype/cmd/hype@latest
+        run: go install github.com/gopherguides/hype/cmd/hype@rename-module-md
 
       - name: Run hype
         run: hype export -format=markdown -f hype.md > README.md
