trying to fix windows tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build
         run: go build -v ./...
 
+      - name: Build Wails
+        run: go build -v -tags wails ./...
+
       - name: Run tests with Race Detector
         run: go test -race -vet=off ./...
 
